WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
220882
REGRESSION(
r266148
) Cancelling a navigation in decidePolicyForNavigationAction should not suspend the previous document's font loading timer
https://bugs.webkit.org/show_bug.cgi?id=220882
Summary
REGRESSION(r266148) Cancelling a navigation in decidePolicyForNavigationActio...
Alex Christensen
Reported
2021-01-22 15:47:55 PST
REGRESSION(
r266148
) Cancelling a navigation in decidePolicyForNavigationAction should not suspend the previous document's font loading timer
Attachments
Patch
(5.82 KB, patch)
2021-01-22 16:09 PST
,
Alex Christensen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2021-01-22 16:09:58 PST
Created
attachment 418192
[details]
Patch
EWS
Comment 2
2021-01-22 17:25:55 PST
Committed
r271770
: <
https://trac.webkit.org/changeset/271770
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 418192
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-01-22 17:26:14 PST
<
rdar://problem/73522482
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug